tests/valid/05_or_and_precedence.brl
flag := true or false and not false;
print flag;
