tests/invalid/09_adjacent_operands.brl
value := age 18;
print value;
